# Sanzy-Job-FInder

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTOAPPLY_PRD.md  README.md  docker-compose.dev.yml  docker-compose.yml  generate_prd_pdf.py  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: analytics.py  applications.py  jobs.py  resumes.py  router.py  settings.py
backend/app/api/websocket/: __init__.py  endpoint.py  events.py
backend/app/config/: __init__.py  constants.py  settings.py
backend/app/core/: __init__.py  db_resilience.py  exceptions.py
backend/app/core/ats/: __init__.py  experience_analyzer.py  keyword_analyzer.py  optimizer.py  scorer.py  skill_matcher.py
backend/app/core/automation/: __init__.py  agent.py  session_manager.py
backend/app/core/documents/: __init__.py  docx_renderer.py  generator.py  parser.py  pdf_renderer.py
backend/app/core/job_discovery/: __init__.py  exa_search.py
backend/app/core/llm/: __init__.py  client.py  usage_tracker.py
backend/app/core/llm/prompts/: __init__.py  ats_optimize.py  cover_letter.py  resume_tailor.py
backend/app/core/matching/: __init__.py  vector_store.py
backend/app/db/: redis.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  application.py  base.py  job.py  llm_usage.py  resume.py  user_settings.py
backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/app/schemas/: __init__.py  analytics.py  application.py  job.py  resume.py  settings.py
backend/app/services/: __init__.py  analytics.py  application.py  job_search.py  queue.py  resume.py
backend/app/workers/: __init__.py  application_worker.py
backend/data/db/: autoapply.db
backend/tests/: conftest.py
backend/tests/e2e/: test_full_pipeline.py
backend/tests/integration/: test_analytics_api.py  test_applications_api.py  test_error_handling.py  test_health.py  test_jobs_api.py  test_resumes_api.py  test_settings_api.py
backend/tests/unit/: test_analytics_service.py  test_application_service.py  test_browser_agent.py  test_cover_letter_prompts.py  test_db_resilience.py  test_document_parser.py  test_exceptions.py  test_experience_analyzer.py  test_job_service.py  test_keyword_analyzer.py  test_llm_client.py  test_llm_wiring.py  test_logging_config.py  test_models.py  test_optimizer.py  test_platform_registry.py  test_queue_service.py  test_redis.py  test_resume_service.py  test_schemas.py  test_scorer.py  test_session_manager.py  test_settings.py  test_skill_matcher.py  test_tracing.py  test_vector_store.py  test_websocket_events.py  test_worker.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  INTEGRATION_PLAN.md  TOOLS.md  wiki.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/__tests__/components/: ErrorBoundary.test.tsx  JobCard.test.tsx  LoadingState.test.tsx  TemplateSelector.test.tsx
frontend/src/__tests__/mocks/: handlers.ts  server.ts
frontend/src/__tests__/store/: useAppStore.test.ts  useJobStore.test.ts
frontend/src/components/applications/: ApplicationCard.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadingState.tsx
frontend/src/components/dashboard/: ApplicationFunnel.tsx  HeroSection.tsx  StatsCards.tsx
frontend/src/components/jobs/: JobCard.tsx  JobDetail.tsx  JobFilters.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  VantaBirdsBackground.tsx
frontend/src/components/resumes/: ATSScoreCard.tsx  ResumeUpload.tsx  TemplateSelector.tsx
frontend/src/components/settings/: CandidateProfileEditor.tsx  EducationForm.tsx  ExperienceForm.tsx  LLMProvidersCard.tsx  SkillsEditor.tsx
frontend/src/hooks/: useAnalytics.ts  useApplications.ts  useJobs.ts  useResumes.ts  useSettings.ts  useWebSocket.ts
frontend/src/pages/: AnalyticsPage.tsx  ApplicationsPage.tsx  DashboardPage.tsx  JobSearchPage.tsx  ResumesPage.tsx  SettingsPage.tsx
frontend/src/services/: analyticsService.ts  api.ts  applicationService.ts  jobService.ts  resumeService.ts  settingsService.ts
frontend/src/store/: useAppStore.ts  useJobStore.ts
frontend/src/types/: analytics.ts  api.ts  application.ts  job.ts  resume.ts  settings.ts
templates/cover_letter/creative/: style.css  template.html
templates/cover_letter/standard/: style.css  template.html
templates/cover_letter/technical/: style.css  template.html
templates/resume/classic/: style.css  template.html
templates/resume/creative/: style.css  template.html
templates/resume/executive/: style.css  template.html
templates/resume/minimal/: style.css  template.html
templates/resume/modern/: style.css  template.html
